<?xml version="1.0"?>
<package>
  <name>ros_human_gazebo</name>
  <version>0.0.0</version>
  <description>-</description>

  <maintainer email="example@example.com">-</maintainer>
  <author email="example@example.com">-</author>

  <license>-</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
